# lcurve-rs

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: tests.yml
crates/lcurve/: Cargo.toml
crates/lcurve/examples/: diag.rs
crates/lcurve/src/: brightness.rs  flux.rs  grid.rs  lib.rs  model.rs  orchestration.rs  types.rs
crates/phoebe-rs/: Cargo.toml
crates/phoebe-rs/src/: analytic.rs  flux.rs  geometry.rs  lib.rs  lightcurve.rs  marching.rs  params.rs  passband.rs
crates/phoebe-rs/tests/: basic.rs
crates/roche/: Cargo.toml
crates/roche/src/: disc_eclipse.rs  eclipse.rs  lagrange.rs  lib.rs  lobes.rs  misc.rs  potential.rs  stream.rs  surface.rs
crates/subs/: Cargo.toml
crates/subs/src/: constants.rs  lib.rs  planck.rs  vec3.rs
crates/subs/src/numerical/: bsstep.rs  dbrent.rs  mod.rs  rtsafe.rs  svdfit.rs
docs/: index.md
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
python/: Cargo.toml  pyproject.toml
python/lcurve_rs/: __init__.py  eb_fitting.py  fitting.py
python/src/: lib.rs
src/: main.rs
test_data/: run_regression100.py
tests/: chisq_batch.rs  regression.rs
